Refactor/performance (#18)
* feat: refactor ProductControllerTest by reorganizing imports and removing unused variables

* feat: implement pessimistic locking for brand and product retrieval

* feat: optimize product retrieval methods and enhance query efficiency

* feat: enhance CategoryPriceSummaryUsecase with optimized queries and improve test coverage

* feat: implement caching for brand and category price retrieval methods

* feat: add caching configuration and integration tests for category product pricing

* feat: implement Redis caching configuration and error handling for improved performance

* feat: enhance caching strategy for product pricing with new cache configurations and optimized retrieval methods

* feat: add unique indexes for brand and category entities to improve query performance

* feat: update cache configuration and error handling for product management with improved exception handling

* feat: refactor product creation and deletion logic with improved exception handling and validation

* feat: refactor product creation and deletion logic with improved exception handling and validation

---------

Co-authored-by: mikekang47 <sihookang47@gmail.com>