@@ -4,11 +4,11 @@ import io.github.hoo47.musinsa_assignment.application.brand.dto.response.Categor
 import io.github.hoo47.musinsa_assignment.application.product.service.ProductQueryService;
 import io.github.hoo47.musinsa_assignment.domain.product.Product;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -17,6 +17,15 @@ public class CategoryPriceSummaryUsecase {
 
     private final ProductQueryService productQueryService;
 
+    /**
+     * Get price summary (lowest and highest prices) for a specific category
+     * This method uses optimized repository queries to retrieve data efficiently.
+     * 결과는 캐시에 저장되어 동일한 카테고리 요청 시 DB 쿼리 없이 빠르게 응답합니다.
+     *
+     * @param categoryName the name of the category to get price summary for
+     * @return a CategoryPriceSummaryResponse containing the category name, lowest prices, and highest prices
+     */
+    @Cacheable(value = "priceSummaryCache", key = "#categoryName")
     public CategoryPriceSummaryResponse getPriceSummaryByCategoryName(String categoryName) {
         // Get all products with the lowest price for the category
         List<Product> cheapestProducts = productQueryService.findCheapestByCategoryName(categoryName);
@@ -25,11 +34,11 @@ public class CategoryPriceSummaryUsecase {
 
         List<CategoryPriceSummaryResponse.PriceInfo> lowestPrices = cheapestProducts.stream()
                 .map(p -> new CategoryPriceSummaryResponse.PriceInfo(p.getBrand().getName(), p.getPrice()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<CategoryPriceSummaryResponse.PriceInfo> highestPrices = expensiveProducts.stream()
                 .map(p -> new CategoryPriceSummaryResponse.PriceInfo(p.getBrand().getName(), p.getPrice()))
-                .collect(Collectors.toList());
+                .toList();
 
         return new CategoryPriceSummaryResponse(categoryName, lowestPrices, highestPrices);
     }
